fixed employee tests